--- a/script/RNotebook/questionnaire.Rmd
+++ b/script/RNotebook/questionnaire.Rmd
@@ -8,7 +8,7 @@ editor_options:
 
 ##### Description: This is a summary of demographic information
 
-# Outline - Quesionnaire
+# Outline - Questionnaire
 
 ```{r read, echo = FALSE}
 # Read csv files
