--- a/script/RNotebook/dynamics.Rmd
+++ b/script/RNotebook/dynamics.Rmd
@@ -137,6 +137,7 @@ p_vel_dyn
 - Hypothesis: Participants will exaggerate forte and piano when teaching.
 
 ```{r vel_dyn_all, echo = FALSE}
+# Group mean
 vel_dyn_all <- aggregate(Mean~Condition*Skill*Subcomponent, data = vel_dyn,
                          FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 vel_dyn_all <- cbind(vel_dyn_all[,1:3], as.data.frame(vel_dyn_all[,4]))
@@ -299,6 +300,7 @@ p_vel_acc_dyn
 - Hypothesis: Participants will exaggerate legato and staccato when teaching.
 
 ```{r vel_acc_dyn_all, echo = FALSE}
+# Group mean
 vel_acc_dyn_all <- aggregate(Mean~Condition*Skill*Subcomponent, data = vel_acc_dyn,
                          FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 vel_acc_dyn_all <- cbind(vel_acc_dyn_all[,1:3], as.data.frame(vel_acc_dyn_all[,4]))
@@ -312,7 +314,7 @@ p_vel_acc_dyn_all <- ggplot(data = vel_acc_dyn_all, aes(x = Subcomponent, y = Me
   geom_bar(stat = "identity", position = position_dodge()) +
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width = .2, position = position_dodge(.9)) +
-  labs(y = "Difference", subtitle = "KV: Dynamics")
+  labs(y = "Difference", subtitle = "KV-Diff: Dynamics")
 p_vel_acc_dyn_all
 ```
 
@@ -460,6 +462,7 @@ p_vel_art
 - Average KV for each condition.
 
 ```{r vel_art_all, echo = FALSE}
+# Group mean
 vel_art_all <- aggregate(Mean~Condition*Skill*Subcomponent, data = vel_art,
                          FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 vel_art_all <- cbind(vel_art_all[,1:3], as.data.frame(vel_art_all[,4]))
@@ -622,6 +625,7 @@ p_vel_acc_art
 - Hypothesis: Participants will exaggerate legato and staccato when teaching.
 
 ```{r vel_acc_art_all, echo = FALSE}
+# Group mean
 vel_acc_art_all <- aggregate(Mean~Condition*Skill*Subcomponent, data = vel_acc_art,
                          FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x), sem = sd(x)/sqrt(length(x))), 4)})
 vel_acc_art_all <- cbind(vel_acc_art_all[,1:3], as.data.frame(vel_acc_art_all[,4]))
